--- a/docs/Atoms.tex
+++ b/docs/Atoms.tex
@@ -1,9 +1,11 @@
 \section{Describing an atomic system}
 
 \begin{markdown}
-All atomic systems are assumed to be periodic.
+Because plane wave basis set is used, all atomic systems are assumed
+to be periodic. For isolated molecular systems, a periodic bounding box
+must be specified.
 
-The definition of type `Atoms` is given below.
+Currently, the definition of type `Atoms` is given below.
 
 ```julia
 mutable struct Atoms
@@ -19,23 +21,51 @@ end
 ```
 
 Information about `LatVecs` and `Zvals` are also available
-from `PWGrid` and `PsPots`. They are included to reduce number of
-required arguments to several functions.
+from `PWGrid` and `PsPotGTH`, respectively.
+They are included to reduce number of required arguments to several functions.
+
+`LatVecs` represents lattice vectors $a_{1}$, $a_{2}$, dan $a_{3}$, stacked by column
+in $3\times3$ matrix.
+
+`Zvals` is set when constructing `PWHamiltonian`. The default value is `zeros(Nspecies)`.
 
 Currently, the following functions are provided to initialize an `Atoms`:
 
-```julia
-atoms = Atoms() # dummy constructor
-atoms = init_atoms_xyz(filexyz; in_bohr=false, verbose=false)
-atoms = init_atoms_xyz_string(filexyz; in_bohr=false, verbose=false)
-```
+- Using dummy constructor:
+  ```julia
+  atoms = Atoms()
+  ```
+  It is important to set other fields of `atoms` accordingly.
 
-Note that, `LatVecs` must be set manually by:
+- Using xyz-like structure
+  ```julia
+  atoms = init_atoms_xyz(filexyz; in_bohr=false, verbose=false)
+  atoms = init_atoms_xyz_string(filexyz; in_bohr=false, verbose=false)
+  ```
+  In the first function, `filexyz` is a string representing path of the xyz file while
+  in the second function `filexyz` represent directly the content of xyz file.
+  Example:
+  ```julia
+  # Initialize using an existing xyz file
+  atoms = init_atoms_xyz("H2O.xyz")
+  # Initialize using 'inline' xyz file
+  atoms = init_atoms_xyz(
+  """
+  2
+
+  O   -0.8  0.0  0.0
+  O    0.8  0.0  0.0
+  """
+  ```
+
+Note that, for both way `LatVecs` must be set manually by:
 ```julia
 atoms.LatVecs = 16*eye(3) # for example
 ```
+Currently there is no warning or check being performed to make sure that `LatVecs`
+is defined properly. The default value is `zeros(3,3)`. So an error will happen
+if an instance of `PWGrid` is constucted because we will try to invert a zero matrix.
 
-`Zvals` is set when constructing `PWHamiltonian`.
 
 Equation
 \begin{equation}
