Add STATUS in docs/MAIN

--- a/docs/MAIN.tex
+++ b/docs/MAIN.tex
@@ -32,6 +32,8 @@
 `PWDFT.jl` uses Hartree atomic units.
 \end{markdown}
 
+\input{STATUS}
+
 \input{Atoms}
 
 
@@ -61,7 +63,7 @@ Monkhorst-Pack grid (used for Brillouin-zone integration)
 \end{equation}
 
 where $n_i=1,2,...,N_{i}$
-size = \((N_1, N_2, N_3)\) and the \(\mathbf{b}_i\)‘s are reciprocal lattice vectors.
+size = \((N_1, N_2, N_3)\) and the \(\mathbf{b}_i\)'s are reciprocal lattice vectors.
 
 Please see file \texttt{kpoint\_grid.f90} in \verb|PW/src|.
 
