Comparing total energy with and without PspCore ene, using different way to handle electrostatic energies

--- a/notebooks/TestNewEnergy.ipynb
+++ b/notebooks/TestNewEnergy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "op_nabla_dot (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "include(\"../src/Atoms.jl\");\n",
     "\n",
@@ -125,94 +136,110 @@
     "include(\"../src/Ylm_real.jl\");\n",
     "include(\"../src/Ylm_complex.jl\");\n",
     "\n",
-    "include(\"../src/fft_support.jl\");"
+    "include(\"../src/fft_support.jl\");\n",
+    "\n",
+    "include(\"../src/PWGrid.jl\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search: \u001b[0m\u001b[1mA\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1mm\u001b[22m\u001b[0m\u001b[1ms\u001b[22m get_Z\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1mm\u001b[22m\u001b[0m\u001b[1ms\u001b[22m init_\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1mm\u001b[22m\u001b[0m\u001b[1ms\u001b[22m_xyz init_\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1mm\u001b[22m\u001b[0m\u001b[1ms\u001b[22m_xyz_ext init_\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1mm\u001b[22m\u001b[0m\u001b[1ms\u001b[22m_xyz_string\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
-      "text/markdown": [
-       "The type for representing an atomic-scale structures such as molecules and solids.\n",
-       "\n",
-       "---\n",
-       "\n",
-       "Creates an instance of `Atoms`.\n",
-       "\n",
-       "If no arguments are given, then a dummy `Atoms` is returned.\n",
-       "\n",
-       "Use only one of `xyz_file`, `xyz_string` and `xyz_string_frac` for specifying number of atoms, atomic symbols, and positions, following xyz format, for example:\n",
-       "\n",
-       "```\n",
-       "3\n",
-       "\n",
-       "C   0.0   0.0   0.0\n",
-       "O   0.0   0.0   1.5\n",
-       "```\n",
-       "\n",
-       "The argument `xyz_file` is used when the structure is given in an xyz file, which in this case `xyz_file` is a string of path to the xyz file. By default the unit used is angstrom. If the coordinate is given in bohr, set `in_bohr=true`.\n",
-       "\n",
-       "Alternatively, one can pass the content of xyz file as string in `xyz_string`.\n",
-       "\n",
-       "`xyz_string_frac` is the same as `xyz_string`, however the actual coordinates will be transformed by multiplying it with `LatVecs`. This is useful for crystals.\n"
-      ],
       "text/plain": [
-       "  The type for representing an atomic-scale structures such as molecules and\n",
-       "  solids.\n",
-       "\n",
-       "  ────────────────────────────────────────────────────────────────────────────\n",
-       "\n",
-       "  Creates an instance of \u001b[36mAtoms\u001b[39m.\n",
-       "\n",
-       "  If no arguments are given, then a dummy \u001b[36mAtoms\u001b[39m is returned.\n",
-       "\n",
-       "  Use only one of \u001b[36mxyz_file\u001b[39m, \u001b[36mxyz_string\u001b[39m and \u001b[36mxyz_string_frac\u001b[39m for specifying\n",
-       "  number of atoms, atomic symbols, and positions, following xyz format, for\n",
-       "  example:\n",
-       "\n",
-       "\u001b[36m  3\u001b[39m\n",
-       "\u001b[36m  \u001b[39m\n",
-       "\u001b[36m  C   0.0   0.0   0.0\u001b[39m\n",
-       "\u001b[36m  O   0.0   0.0   1.5\u001b[39m\n",
-       "\n",
-       "  The argument \u001b[36mxyz_file\u001b[39m is used when the structure is given in an xyz file,\n",
-       "  which in this case \u001b[36mxyz_file\u001b[39m is a string of path to the xyz file. By default\n",
-       "  the unit used is angstrom. If the coordinate is given in bohr, set\n",
-       "  \u001b[36min_bohr=true\u001b[39m.\n",
-       "\n",
-       "  Alternatively, one can pass the content of xyz file as string in \u001b[36mxyz_string\u001b[39m.\n",
-       "\n",
-       "  \u001b[36mxyz_string_frac\u001b[39m is the same as \u001b[36mxyz_string\u001b[39m, however the actual coordinates\n",
-       "  will be transformed by multiplying it with \u001b[36mLatVecs\u001b[39m. This is useful for\n",
-       "  crystals."
+       "eval_proj_G (generic function with 2 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "?Atoms"
+    "include(\"PsPot_GTH_mod.jl\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "include(\"../src/wrappers_fft.jl\");\n",
+    "include(\"../src/Electrons.jl\");\n",
+    "include(\"../src/calc_strfact.jl\");\n",
+    "include(\"../src/init_V_coulomb_G.jl\");\n",
+    "\n",
+    "mutable struct XCFuncType\n",
+    "end\n",
+    "include(\"../src/LDA_VWN.jl\");\n",
+    "include(\"../src/GGA_PBE.jl\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian auxiliary charge density"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By convention this auxiliary charge density is negative\n",
+    "\n",
+    "$$\n",
+    "\\rho_{\\mathrm{aux}}(\\mathbf{r}) =\n",
+    "-\\frac{(2\\eta)^3}{(2\\pi)^{3/2}}\n",
+    "\\sum_{I=1}^{P} Z_{I}\n",
+    "\\exp\\left[-2\\eta^2(\\mathbf{r} - \\mathbf{R}_{I})^2\\right]\n",
+    "$$\n",
+    "\n",
+    "The multiplying factor is to ensure normalization of charge density."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gen_Rhoe_aux (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function gen_Rhoe_aux(\n",
+    "    eta::Float64, atoms::Atoms, Zvals::Array{Float64,1}, pw::PWGrid\n",
+    ")\n",
+    "    #\n",
+    "    Npoints = prod(pw.Ns)\n",
+    "    Rhoe_aux = zeros(Float64,Npoints)\n",
+    "    Natoms = atoms.Natoms\n",
+    "    atm2species = atoms.atm2species\n",
+    "    #\n",
+    "    for ip = 1:Npoints\n",
+    "        r = pw.r[:,ip]\n",
+    "        for ia = 1:Natoms\n",
+    "            isp = atm2species[ia]\n",
+    "            R = atoms.positions[:,ia]\n",
+    "            Z = Zvals[isp]\n",
+    "            dr2 = dot(r-R,r-R)\n",
+    "            Rhoe_aux[ip] = Rhoe_aux[ip] + Z*exp(-2*eta^2*dr2)\n",
+    "        end\n",
+    "    end\n",
+    "    return -(2*eta)^3/((2*pi)^1.5)*Rhoe_aux\n",
+    "end"
+   ]
   },
   {
    "cell_type": "code",
