Moving from markdown to latex for docs

--- a/docs/Atoms.tex
+++ b/docs/Atoms.tex
@@ -58,7 +58,7 @@ Currently, the following functions are provided to initialize an `Atoms`:
   """
   ```
 
-Note that, for both way `LatVecs` must be set manually by:
+Note that, for both ways `LatVecs` must be set manually by:
 ```julia
 atoms.LatVecs = 16*eye(3) # for example
 ```
