--- a/docs/STATUS.tex
+++ b/docs/STATUS.tex
@@ -18,7 +18,7 @@
   Total energy result for periodic solid is quite different from ABINIT and PWSCF.
   I suspect that this is related to treatment of electrostatic terms in periodic system.
 
-  SCF is quite shaky for several systems, however it is working in quite well in nonmetallic
+  SCF is rather shaky for several systems, however it is working in quite well in nonmetallic
   system.
 
 \end{markdown}
