Use FreeMono font

--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -6,6 +6,10 @@
 \setlength{\parskip}{\smallskipamount}
 \setlength{\parindent}{0pt}
 
+\usepackage{fontspec}
+%\setmainfont{Linux Libertine O}
+\setmonofont{FreeMono}
+
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{xcolor}
