Details of installation steps

--- a/docs/PWDFT_docs.tex
+++ b/docs/PWDFT_docs.tex
@@ -101,7 +101,7 @@ If there are no error messages then the installation is OK.
 \subsection{LibXC}
 
 \begin{textcode}
-./configure --prefix=/home/user/softwares/libxc
+./configure --prefix=/home/user/softwares/libxc --disable-fortran --enable-shared
 make
 make install
 \end{textcode}
