Add pointers for presentation

--- a/docs/PRESE_01/PWDFTIntro.tex
+++ b/docs/PRESE_01/PWDFTIntro.tex
@@ -151,5 +151,27 @@ Components of total free energy (in Hartree) :
 
 \end{frame}
 
+
+\begin{frame}
+\frametitle{SCF options}
+
+Various mixing methods
+
+Various diagonalization schemes
+
+ChebySCF
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Direct energy minimization}
+
+For systems with band gaps:
+
+Conjugate gradient
+
+\end{frame}
+
 \end{document}
 
